--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.18.1",
+    "gsap": "^3.13.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
@@ -25,6 +29,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "tailwindcss": "^4.1.10",
+    "three": "^0.178.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
